--- a/docs/.vitepress/theme/hero.css
+++ b/docs/.vitepress/theme/hero.css
@@ -9,8 +9,8 @@
     --vp-home-hero-name-color: #0094ff;
     --vp-home-hero-image-background-image: linear-gradient(
       -45deg,
-      #0094ff 50%,
-      #42d392 50%
+      hsl(205, 62%, 50%) 50%,
+      hsl(153, 62%, 54%) 50%
     );
     --vp-home-hero-image-filter: blur(44px);
   }
